# md2view

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  hello.py  lsan.supp  vcpkg-configuration.json  vcpkg.json
data/shaders/: blur.frag  blur.vert  compile.bat  glow.frag  imgui.frag  md2.frag  md2.vert  screen.frag  screen.vert
docs/: DESIGN.md  VK_ROADMAP.md
include/md2view/: camera.hpp  engine.hpp  frame_buffer.hpp  gl.hpp  glengine.hpp  gui.hpp  md2.hpp  md2view.hpp  model_selector.hpp  pak.hpp  pcx.hpp  resource_manager.hpp  screen_quad.hpp  shader.hpp  texture2D.hpp  ui.hpp  vk.hpp  vkengine.hpp
include/md2view/gl/: engine.hpp  frame_buffer.hpp  gl.hpp  gui.hpp  mesh.hpp  screen_quad.hpp  shader.hpp  texture2d.hpp
include/md2view/vk/: buffer.hpp  engine.hpp  vertex.hpp  vk.hpp  window.hpp
scripts/: coverage.sh  docs.sh
src/: CMakeLists.txt  CheckError.h  camera.cpp  camera.hpp  common.hpp  engine.cpp  engine.hpp  engine.ipp  frame_buffer.cpp  frame_buffer.hpp  frame_buffer.ipp  gl.hpp  gl_engine.ipp  gl_frame_buffer.cpp  gl_gui.cpp  gl_mesh.cpp  gl_screen_quad.cpp  gl_shader.cpp  gl_texture2d.cpp  glengine.hpp  glengine.ipp  gui.cpp  gui.hpp  main.cpp  md2.cpp  md2.hpp  md2gui.cpp  md2gui.hpp  md2view.cpp  md2view.hpp  model_selector.cpp  model_selector.hpp  pak.cpp  pak.hpp  pcx.cpp  pcx.hpp  quad.hpp  resource_manager.cpp  resource_manager.hpp  screen_quad.cpp  (+12 more)
src/models/berserk/: skin.tga
src/models/ogro/: igdosh.tga
src/shaders/: blending.frag  blending.vert  imgui.vert  md2.frag  md2_model.frag  md2_model.vert
tests/: CMakeLists.txt  README.md  fixtures.hpp.in  gen_fixtures.cpp  test_camera.cpp  test_md2.cpp  test_pak.cpp  test_pcx.cpp  tmpdir.cpp  tmpdir.hpp
